--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -19,7 +19,7 @@ are at the top. Dates written extra large are release dates. This contains only 
   * Moved the remaining plugins from the core tree to the [http://code.google.com/p/v8-juice/source/browse/extra-plugins/src extra-plugins source repo].
   * The [ConvertingTypes convert.h code] is now independent of the rest of the library.
   * The [CreatingJSClasses WeakJSClassCreator cast operators] can now cast from JS to `(T&)` and `(T const &)`. This means functions taking reference types can now be bound.  The conversions must throw a std::exception if the conversion fails, to avoid dereferencing null. The function forwarding framework will catch such exceptions and return the result as a JS exception, rather than letting the native exception propagate through v8 (which can lead to a corrupt stack).
-  * Added `--print-cerr` to the `v8-juice-shell` app. This forces the JS `print()` to use `std::cerr` for output instead of `std::cout`, which is often helpful when debugging [PluginNCurses curses applications] (we can then redirect `print()` to another console without hosing the curses screen state).
+  * Added the `--print-cerr` command line option `v8-juice-shell`. This forces the JS `print()` function to use `std::cerr` for output instead of `std::cout`, which is often helpful when debugging [PluginNCurses curses applications] (we can then redirect `print()` to another console without hosing the curses screen state).
 
 
 ==2009 March 25==
