--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,9 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+==2009 April 4==
+  * New release.
+
 *2009 March 31*
   * Added toggles to [CreatingJSClasses WeakJSClassCreator] to allow constructors to be called without `new` and to activate searches for the native `this` object via JS-side prototypes (necessary if JS types are to subclass native types).
   * Minor additions to the [PluginNCurses ncurses plugin].
