--- a/wiki/ClassBinder.wiki
+++ b/wiki/ClassBinder.wiki
@@ -101,8 +101,8 @@ Again, the syntax is ugly, but not as ugly as that for binding functions. If we 
 
 {{{
 binder.Set( "str",
-     MemVarGetter<MY,std::string, &MY::str>,
-     MemVarSetter<MY,std::string, &MY::str> );
+     MemberVarGetter<MY,std::string, &MY::str>,
+     MemberVarSetter<MY,std::string, &MY::str> );
 }}}
 
 Or, more succinctly:
@@ -113,7 +113,7 @@ binder.BindMemVar<std::string,&MY::str>( "str" );
 
 which is basically a shorthand form of the above (but also uses different default access options for the generated function!).
 
-The `MemVarSetter<>()` and `MemVarGetter<>()` templates create functions which set/get the native member using [ConvertingTypes CastFromJS() and CastToJS()]. This means that we can also bind members which are pointers to other wrapped types, and access those transparently via JS. e.g. if the MY type has a member `MY * other`, we can bind that:
+The `MemberVarSetter<>()` and `MemberVarGetter<>()` templates create functions which set/get the native member using [ConvertingTypes CastFromJS() and CastToJS()]. This means that we can also bind members which are pointers to other wrapped types, and access those transparently via JS. e.g. if the MY type has a member `MY * other`, we can bind that:
 
 {{{
 binder.BindMemVar<MY *, &MY::other>( "other" );
@@ -293,7 +293,7 @@ And now what we originally set out to to: bind `my_native` with JS:
 
 Again, the templates syntax is ugly, but it also has no extra runtime memory costs other than that needed by the v8 internals and the conversion from JS to native.
 
-While it isn't demonstrated here, `const` member functions can also be bound (the syntax is the same). For more information on binding member variables, see the API docs for `v8::juice::MemVarGetter<>()` and `v8::juice::MemVarSetter<>()` (in [http://code.google.com/p/v8-juice/source/browse/trunk/src/include/v8/juice/ClassBinder.h ClassBinder.h]).
+While it isn't demonstrated here, `const` member functions can also be bound (the syntax is the same). For more information on binding member variables, see the API docs for `v8::juice::MemberVarGetter<>()` and `v8::juice::MemberVarSetter<>()` (in [http://code.google.com/p/v8-juice/source/browse/trunk/src/include/v8/juice/ClassBinder.h ClassBinder.h]).
 
 ==And finally... script code==
 
