Edited wiki page through web user interface.

--- a/wiki/Plugins.wiki
+++ b/wiki/Plugins.wiki
@@ -7,7 +7,7 @@
 
 v8-juice provides an API for loading DLLs with the intent of adding functionality to a running JS engine.
 
-List of current plugins (in alphabetical order):
+List of current plugins:
 
   * An object-oriented [PluginNCurses ncurses wrapper].
   * A minimalistic [PluginReadline GNU Readline/BSD Editline wrapper]
